python/versioned_docs/version-1.23/api/class-browsercontext.mdx
---
id: class-browsercontext
title: "BrowserContext"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

* extends: [EventEmitter]

BrowserContexts provide a way to operate multiple independent browser sessions.

If a page opens another page, e.g. with a `window.open` call, the popup will belong to the parent page's browser context.

Playwright allows creating "incognito" browser contexts with [browser.new_context(**kwargs)](./api/class-browser.mdx#browser-new-context) method. "Incognito" browser contexts don't write any browsing data to disk.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
# create a new incognito browser context
context = browser.new_context()
# create a new page inside context.
page = context.new_page()
page.goto("https://example.com")
# dispose context once it is no longer needed.
context.close()
```

</TabItem>
<TabItem value="async">

```py
# create a new incognito browser context
context = await browser.new_context()
# create a new page inside context.
page = await context.new_page()
await page.goto("https://example.com")
# dispose context once it is no longer needed.
await context.close()
```

</TabItem>
</Tabs>


- [browser_context.on("backgroundpage")](./api/class-browsercontext.mdx#browser-context-event-background-page)
- [browser_context.on("close")](./api/class-browsercontext.mdx#browser-context-event-close)
- [browser_context.on("page")](./api/class-browsercontext.mdx#browser-context-event-page)
- [browser_context.on("request")](./api/class-browsercontext.mdx#browser-context-event-request)
- [browser_context.on("requestfailed")](./api/class-browsercontext.mdx#browser-context-event-request-failed)
- [browser_context.on("requestfinished")](./api/class-browsercontext.mdx#browser-context-event-request-finished)
- [browser_context.on("response")](./api/class-browsercontext.mdx#browser-context-event-response)
- [browser_context.on("serviceworker")](./api/class-browsercontext.mdx#browser-context-event-service-worker)
- [browser_context.add_cookies(cookies)](./api/class-browsercontext.mdx#browser-context-add-cookies)
- [browser_context.add_init_script(**kwargs)](./api/class-browsercontext.mdx#browser-context-add-init-script)
- [browser_context.background_pages](./api/class-browsercontext.mdx#browser-context-background-pages)
- [browser_context.browser](./api/class-browsercontext.mdx#browser-context-browser)
- [browser_context.clear_cookies()](./api/class-browsercontext.mdx#browser-context-clear-cookies)
- [browser_context.clear_permissions()](./api/class-browsercontext.mdx#browser-context-clear-permissions)
- [browser_context.close()](./api/class-browsercontext.mdx#browser-context-close)
- [browser_context.cookies(**kwargs)](./api/class-browsercontext.mdx#browser-context-cookies)
- [browser_context.expect_event(event, **kwargs)](./api/class-browsercontext.mdx#browser-context-wait-for-event)
- [browser_context.expect_page(**kwargs)](./api/class-browsercontext.mdx#browser-context-wait-for-page)
- [browser_context.expose_binding(name, callback, **kwargs)](./api/class-browsercontext.mdx#browser-context-expose-binding)
- [browser_context.expose_function(name, callback)](./api/class-browsercontext.mdx#browser-context-expose-function)
- [browser_context.grant_permissions(permissions, **kwargs)](./api/class-browsercontext.mdx#browser-context-grant-permissions)
- [browser_context.new_cdp_session(page)](./api/class-browsercontext.mdx#browser-context-new-cdp-session)
- [browser_context.new_page()](./api/class-browsercontext.mdx#browser-context-new-page)
- [browser_context.pages](./api/class-browsercontext.mdx#browser-context-pages)
- [browser_context.route(url, handler, **kwargs)](./api/class-browsercontext.mdx#browser-context-route)
- [browser_context.route_from_har(har, **kwargs)](./api/class-browsercontext.mdx#browser-context-route-from-har)
- [browser_context.service_workers](./api/class-browsercontext.mdx#browser-context-service-workers)
- [browser_context.set_default_navigation_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout)
- [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout)
- [browser_context.set_extra_http_headers(headers)](./api/class-browsercontext.mdx#browser-context-set-extra-http-headers)
- [browser_context.set_geolocation(geolocation)](./api/class-browsercontext.mdx#browser-context-set-geolocation)
- [browser_context.set_offline(offline)](./api/class-browsercontext.mdx#browser-context-set-offline)
- [browser_context.storage_state(**kwargs)](./api/class-browsercontext.mdx#browser-context-storage-state)
- [browser_context.unroute(url, **kwargs)](./api/class-browsercontext.mdx#browser-context-unroute)
- [browser_context.wait_for_event(event, **kwargs)](./api/class-browsercontext.mdx#browser-context-wait-for-event-2)
- [browser_context.request](./api/class-browsercontext.mdx#browser-context-request)
- [browser_context.tracing](./api/class-browsercontext.mdx#browser-context-tracing)

## browser_context.on("backgroundpage") {#browser-context-event-background-page}
- type: &#60;[Page]&#62;

:::note
Only works with Chromium browser's persistent context.
:::

Emitted when new background page is created in the context.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
background_page = context.wait_for_event("backgroundpage")
```

</TabItem>
<TabItem value="async">

```py
background_page = await context.wait_for_event("backgroundpage")
```

</TabItem>
</Tabs>

## browser_context.on("close") {#browser-context-event-close}
- type: &#60;[BrowserContext]&#62;

Emitted when Browser context gets closed. This might happen because of one of the following:
* Browser context is closed.
* Browser application is closed or crashed.
* The [browser.close()](./api/class-browser.mdx#browser-close) method was called.

## browser_context.on("page") {#browser-context-event-page}
- type: &#60;[Page]&#62;

The event is emitted when a new Page is created in the BrowserContext. The page may still be loading. The event will also fire for popup pages. See also [page.on("popup")](./api/class-page.mdx#page-event-popup) to receive events about popups relevant to a specific page.

The earliest moment that page is available is when it has navigated to the initial url. For example, when opening a popup with `window.open('http://example.com')`, this event will fire when the network request to "http://example.com" is done and its response has started loading in the popup.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
with context.expect_page() as page_info:
    page.click("a[target=_blank]"),
page = page_info.value
print(page.evaluate("location.href"))
```

</TabItem>
<TabItem value="async">

```py
async with context.expect_page() as page_info:
    await page.click("a[target=_blank]"),
page = await page_info.value
print(await page.evaluate("location.href"))
```

</TabItem>
</Tabs>

:::note
Use [page.wait_for_load_state(**kwargs)](./api/class-page.mdx#page-wait-for-load-state) to wait until the page gets to a particular state (you should not need it in most cases).
:::

## browser_context.on("request") {#browser-context-event-request}
- type: &#60;[Request]&#62;

Emitted when a request is issued from any pages created through this context. The [request] object is read-only. To only listen for requests from a particular page, use [page.on("request")](./api/class-page.mdx#page-event-request).

In order to intercept and mutate requests, see [browser_context.route(url, handler, **kwargs)](./api/class-browsercontext.mdx#browser-context-route) or [page.route(url, handler, **kwargs)](./api/class-page.mdx#page-route).

## browser_context.on("requestfailed") {#browser-context-event-request-failed}
- type: &#60;[Request]&#62;

Emitted when a request fails, for example by timing out. To only listen for failed requests from a particular page, use [page.on("requestfailed")](./api/class-page.mdx#page-event-request-failed).

:::note
HTTP Error responses, such as 404 or 503, are still successful responses from HTTP standpoint, so request will complete with [browser_context.on("requestfinished")](./api/class-browsercontext.mdx#browser-context-event-request-finished) event and not with [browser_context.on("requestfailed")](./api/class-browsercontext.mdx#browser-context-event-request-failed).
:::

## browser_context.on("requestfinished") {#browser-context-event-request-finished}
- type: &#60;[Request]&#62;

Emitted when a request finishes successfully after downloading the response body. For a successful response, the sequence of events is `request`, `response` and `requestfinished`. To listen for successful requests from a particular page, use [page.on("requestfinished")](./api/class-page.mdx#page-event-request-finished).

## browser_context.on("response") {#browser-context-event-response}
- type: &#60;[Response]&#62;

Emitted when [response] status and headers are received for a request. For a successful response, the sequence of events is `request`, `response` and `requestfinished`. To listen for response events from a particular page, use [page.on("response")](./api/class-page.mdx#page-event-response).

## browser_context.on("serviceworker") {#browser-context-event-service-worker}
- type: &#60;[Worker]&#62;

:::note
Service workers are only supported on Chromium-based browsers.
:::

Emitted when new service worker is created in the context.

## browser_context.add_cookies(cookies) {#browser-context-add-cookies}
- `cookies`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-add-cookies-option-cookies"/> &#60;[List]\[[Dict]\]&#62;<a href="#browser-context-add-cookies-option-cookies" class="list-anchor">#</a>
  - `name` &#60;[str]&#62;
  - `value` &#60;[str]&#62;
  - `url` &#60;[str]&#62; either url or domain / path are required. Optional.
  - `domain` &#60;[str]&#62; either url or domain / path are required Optional.
  - `path` &#60;[str]&#62; either url or domain / path are required Optional.
  - `expires` &#60;[float]&#62; Unix time in seconds. Optional.
  - `httpOnly` &#60;[bool]&#62; Optional.
  - `secure` &#60;[bool]&#62; Optional.
  - `sameSite` &#60;"Strict"|"Lax"|"None"&#62; Optional.
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-add-cookies-return"/> &#60;[NoneType]&#62;<a href="#browser-context-add-cookies-return" class="list-anchor">#</a>

Adds cookies into this browser context. All pages within this context will have these cookies installed. Cookies can be obtained via [browser_context.cookies(**kwargs)](./api/class-browsercontext.mdx#browser-context-cookies).

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
browser_context.add_cookies([cookie_object1, cookie_object2])
```

</TabItem>
<TabItem value="async">

```py
await browser_context.add_cookies([cookie_object1, cookie_object2])
```

</TabItem>
</Tabs>

## browser_context.add_init_script(**kwargs) {#browser-context-add-init-script}
- `path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-add-init-script-option-path"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; Path to the JavaScript file. If `path` is a relative path, then it is resolved relative to the current working directory. Optional.<a href="#browser-context-add-init-script-option-path" class="list-anchor">#</a>
- `script`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-add-init-script-option-script"/> &#60;[str]&#62; Script to be evaluated in all pages in the browser context. Optional.<a href="#browser-context-add-init-script-option-script" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-add-init-script-return"/> &#60;[NoneType]&#62;<a href="#browser-context-add-init-script-return" class="list-anchor">#</a>

Adds a script which would be evaluated in one of the following scenarios:
* Whenever a page is created in the browser context or is navigated.
* Whenever a child frame is attached or navigated in any page in the browser context. In this case, the script is evaluated in the context of the newly attached frame.

The script is evaluated after the document was created but before any of its scripts were run. This is useful to amend the JavaScript environment, e.g. to seed `Math.random`.

An example of overriding `Math.random` before the page loads:

```js
// preload.js
Math.random = () => 42;
```

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
# in your playwright script, assuming the preload.js file is in same directory.
browser_context.add_init_script(path="preload.js")
```

</TabItem>
<TabItem value="async">

```py
# in your playwright script, assuming the preload.js file is in same directory.
await browser_context.add_init_script(path="preload.js")
```

</TabItem>
</Tabs>

:::note
The order of evaluation of multiple scripts installed via [browser_context.add_init_script(**kwargs)](./api/class-browsercontext.mdx#browser-context-add-init-script) and [page.add_init_script(**kwargs)](./api/class-page.mdx#page-add-init-script) is not defined.
:::

## browser_context.background_pages {#browser-context-background-pages}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-background-pages-return"/> &#60;[List]\[[Page]\]&#62;<a href="#browser-context-background-pages-return" class="list-anchor">#</a>

:::note
Background pages are only supported on Chromium-based browsers.
:::

All existing background pages in the context.

## browser_context.browser {#browser-context-browser}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-browser-return"/> &#60;[NoneType]|[Browser]&#62;<a href="#browser-context-browser-return" class="list-anchor">#</a>

Returns the browser instance of the context. If it was launched as a persistent context null gets returned.

## browser_context.clear_cookies() {#browser-context-clear-cookies}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-clear-cookies-return"/> &#60;[NoneType]&#62;<a href="#browser-context-clear-cookies-return" class="list-anchor">#</a>

Clears context cookies.

## browser_context.clear_permissions() {#browser-context-clear-permissions}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-clear-permissions-return"/> &#60;[NoneType]&#62;<a href="#browser-context-clear-permissions-return" class="list-anchor">#</a>

Clears all permission overrides for the browser context.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
context = browser.new_context()
context.grant_permissions(["clipboard-read"])
# do stuff ..
context.clear_permissions()
```

</TabItem>
<TabItem value="async">

```py
context = await browser.new_context()
await context.grant_permissions(["clipboard-read"])
# do stuff ..
context.clear_permissions()
```

</TabItem>
</Tabs>

## browser_context.close() {#browser-context-close}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-close-return"/> &#60;[NoneType]&#62;<a href="#browser-context-close-return" class="list-anchor">#</a>

Closes the browser context. All the pages that belong to the browser context will be closed.

:::note
The default browser context cannot be closed.
:::

## browser_context.cookies(**kwargs) {#browser-context-cookies}
- `urls`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-cookies-option-urls"/> &#60;[str]|[List]\[[str]\]&#62; Optional list of URLs.<a href="#browser-context-cookies-option-urls" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-cookies-return"/> &#60;[List]\[[Dict]\]&#62;<a href="#browser-context-cookies-return" class="list-anchor">#</a>
  - `name` &#60;[str]&#62;
  - `value` &#60;[str]&#62;
  - `domain` &#60;[str]&#62;
  - `path` &#60;[str]&#62;
  - `expires` &#60;[float]&#62; Unix time in seconds.
  - `httpOnly` &#60;[bool]&#62;
  - `secure` &#60;[bool]&#62;
  - `sameSite` &#60;"Strict"|"Lax"|"None"&#62;

If no URLs are specified, this method returns all cookies. If URLs are specified, only cookies that affect those URLs are returned.

## browser_context.expect_event(event, **kwargs) {#browser-context-wait-for-event}
- `event`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-wait-for-event-option-event"/> &#60;[str]&#62; Event name, same one would pass into `browserContext.on(event)`.<a href="#browser-context-wait-for-event-option-event" class="list-anchor">#</a>
- `predicate`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-wait-for-event-option-predicate"/> &#60;[Callable]&#62; Receives the event data and resolves to truthy value when the waiting should resolve.<a href="#browser-context-wait-for-event-option-predicate" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-wait-for-event-option-timeout"/> &#60;[float]&#62; Maximum time to wait for in milliseconds. Defaults to `30000` (30 seconds). Pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout).<a href="#browser-context-wait-for-event-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-wait-for-event-return"/> &#60;[EventContextManager]&#62;<a href="#browser-context-wait-for-event-return" class="list-anchor">#</a>

Waits for event to fire and passes its value into the predicate function. Returns when the predicate returns truthy value. Will throw an error if the context closes before the event is fired. Returns the event data value.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
with context.expect_event("page") as event_info:
    page.click("button")
page = event_info.value
```

</TabItem>
<TabItem value="async">

```py
async with context.expect_event("page") as event_info:
    await page.click("button")
page = await event_info.value
```

</TabItem>
</Tabs>

## browser_context.expect_page(**kwargs) {#browser-context-wait-for-page}
- `predicate`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-wait-for-page-option-predicate"/> &#60;[Callable]\[[Page]\]:[bool]&#62; Receives the [Page] object and resolves to truthy value when the waiting should resolve.<a href="#browser-context-wait-for-page-option-predicate" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-wait-for-page-option-timeout"/> &#60;[float]&#62; Maximum time to wait for in milliseconds. Defaults to `30000` (30 seconds). Pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout).<a href="#browser-context-wait-for-page-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-wait-for-page-return"/> &#60;[EventContextManager]\[[Page]\]&#62;<a href="#browser-context-wait-for-page-return" class="list-anchor">#</a>

Performs action and waits for a new [Page] to be created in the context. If predicate is provided, it passes [Page] value into the `predicate` function and waits for `predicate(event)` to return a truthy value. Will throw an error if the context closes before new [Page] is created.

## browser_context.expose_binding(name, callback, **kwargs) {#browser-context-expose-binding}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-expose-binding-option-name"/> &#60;[str]&#62; Name of the function on the window object.<a href="#browser-context-expose-binding-option-name" class="list-anchor">#</a>
- `callback`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-expose-binding-option-callback"/> &#60;[Callable]&#62; Callback function that will be called in the Playwright's context.<a href="#browser-context-expose-binding-option-callback" class="list-anchor">#</a>
- `handle`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-expose-binding-option-handle"/> &#60;[bool]&#62; Whether to pass the argument as a handle, instead of passing by value. When passing a handle, only one argument is supported. When passing by value, multiple arguments are supported.<a href="#browser-context-expose-binding-option-handle" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-expose-binding-return"/> &#60;[NoneType]&#62;<a href="#browser-context-expose-binding-return" class="list-anchor">#</a>

The method adds a function called `name` on the `window` object of every frame in every page in the context. When called, the function executes `callback` and returns a [Promise] which resolves to the return value of `callback`. If the `callback` returns a [Promise], it will be awaited.

The first argument of the `callback` function contains information about the caller: `{ browserContext: BrowserContext, page: Page, frame: Frame }`.

See [page.expose_binding(name, callback, **kwargs)](./api/class-page.mdx#page-expose-binding) for page-only version.

An example of exposing page URL to all frames in all pages in the context:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
from playwright.sync_api import sync_playwright

def run(playwright):
    webkit = playwright.webkit
    browser = webkit.launch(headless=false)
    context = browser.new_context()
    context.expose_binding("pageURL", lambda source: source["page"].url)
    page = context.new_page()
    page.set_content("""
    <script>
      async function onClick() {
        document.querySelector('div').textContent = await window.pageURL();
      }
    </script>
    <button onclick="onClick()">Click me</button>
    <div></div>
    """)
    page.click("button")

with sync_playwright() as playwright:
    run(playwright)
```

</TabItem>
<TabItem value="async">

```py
import asyncio
from playwright.async_api import async_playwright

async def run(playwright):
    webkit = playwright.webkit
    browser = await webkit.launch(headless=false)
    context = await browser.new_context()
    await context.expose_binding("pageURL", lambda source: source["page"].url)
    page = await context.new_page()
    await page.set_content("""
    <script>
      async function onClick() {
        document.querySelector('div').textContent = await window.pageURL();
      }
    </script>
    <button onclick="onClick()">Click me</button>
    <div></div>
    """)
    await page.click("button")

async def main():
    async with async_playwright() as playwright:
        await run(playwright)
asyncio.run(main())
```

</TabItem>
</Tabs>

An example of passing an element handle:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
def print(source, element):
    print(element.text_content())

context.expose_binding("clicked", print, handle=true)
page.set_content("""
  <script>
    document.addEventListener('click', event => window.clicked(event.target));
  </script>
  <div>Click me</div>
  <div>Or click me</div>
""")
```

</TabItem>
<TabItem value="async">

```py
async def print(source, element):
    print(await element.text_content())

await context.expose_binding("clicked", print, handle=true)
await page.set_content("""
  <script>
    document.addEventListener('click', event => window.clicked(event.target));
  </script>
  <div>Click me</div>
  <div>Or click me</div>
""")
```

</TabItem>
</Tabs>

## browser_context.expose_function(name, callback) {#browser-context-expose-function}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-expose-function-option-name"/> &#60;[str]&#62; Name of the function on the window object.<a href="#browser-context-expose-function-option-name" class="list-anchor">#</a>
- `callback`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-expose-function-option-callback"/> &#60;[Callable]&#62; Callback function that will be called in the Playwright's context.<a href="#browser-context-expose-function-option-callback" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-expose-function-return"/> &#60;[NoneType]&#62;<a href="#browser-context-expose-function-return" class="list-anchor">#</a>

The method adds a function called `name` on the `window` object of every frame in every page in the context. When called, the function executes `callback` and returns a [Promise] which resolves to the return value of `callback`.

If the `callback` returns a [Promise], it will be awaited.

See [page.expose_function(name, callback)](./api/class-page.mdx#page-expose-function) for page-only version.

An example of adding a `sha256` function to all pages in the context:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
import hashlib
from playwright.sync_api import sync_playwright

def sha256(text):
    m = hashlib.sha256()
    m.update(bytes(text, "utf8"))
    return m.hexdigest()


def run(playwright):
    webkit = playwright.webkit
    browser = webkit.launch(headless=False)
    context = browser.new_context()
    context.expose_function("sha256", sha256)
    page = context.new_page()
    page.set_content("""
        <script>
          async function onClick() {
            document.querySelector('div').textContent = await window.sha256('PLAYWRIGHT');
          }
        </script>
        <button onclick="onClick()">Click me</button>
        <div></div>
    """)
    page.click("button")

with sync_playwright() as playwright:
    run(playwright)
```

</TabItem>
<TabItem value="async">

```py
import asyncio
import hashlib
from playwright.async_api import async_playwright

def sha256(text):
    m = hashlib.sha256()
    m.update(bytes(text, "utf8"))
    return m.hexdigest()


async def run(playwright):
    webkit = playwright.webkit
    browser = await webkit.launch(headless=False)
    context = await browser.new_context()
    await context.expose_function("sha256", sha256)
    page = await context.new_page()
    await page.set_content("""
        <script>
          async function onClick() {
            document.querySelector('div').textContent = await window.sha256('PLAYWRIGHT');
          }
        </script>
        <button onclick="onClick()">Click me</button>
        <div></div>
    """)
    await page.click("button")

async def main():
    async with async_playwright() as playwright:
        await run(playwright)
asyncio.run(main())
```

</TabItem>
</Tabs>

## browser_context.grant_permissions(permissions, **kwargs) {#browser-context-grant-permissions}
- `permissions`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-grant-permissions-option-permissions"/> &#60;[List]\[[str]\]&#62; A permission or an array of permissions to grant. Permissions can be one of the following values:<a href="#browser-context-grant-permissions-option-permissions" class="list-anchor">#</a>
  * `'geolocation'`
  * `'midi'`
  * `'midi-sysex'` (system-exclusive midi)
  * `'notifications'`
  * `'camera'`
  * `'microphone'`
  * `'background-sync'`
  * `'ambient-light-sensor'`
  * `'accelerometer'`
  * `'gyroscope'`
  * `'magnetometer'`
  * `'accessibility-events'`
  * `'clipboard-read'`
  * `'clipboard-write'`
  * `'payment-handler'`
- `origin`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-grant-permissions-option-origin"/> &#60;[str]&#62; The [origin] to grant permissions to, e.g. "https://example.com".<a href="#browser-context-grant-permissions-option-origin" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-grant-permissions-return"/> &#60;[NoneType]&#62;<a href="#browser-context-grant-permissions-return" class="list-anchor">#</a>

Grants specified permissions to the browser context. Only grants corresponding permissions to the given origin if specified.

## browser_context.new_cdp_session(page) {#browser-context-new-cdp-session}
- `page`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-new-cdp-session-option-page"/> &#60;[Page]|[Frame]&#62; Target to create new session for. For backwards-compatibility, this parameter is named `page`, but it can be a `Page` or `Frame` type.<a href="#browser-context-new-cdp-session-option-page" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-new-cdp-session-return"/> &#60;[CDPSession]&#62;<a href="#browser-context-new-cdp-session-return" class="list-anchor">#</a>

:::note
CDP sessions are only supported on Chromium-based browsers.
:::

Returns the newly created session.

## browser_context.new_page() {#browser-context-new-page}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-new-page-return"/> &#60;[Page]&#62;<a href="#browser-context-new-page-return" class="list-anchor">#</a>

Creates a new page in the browser context.

## browser_context.pages {#browser-context-pages}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-pages-return"/> &#60;[List]\[[Page]\]&#62;<a href="#browser-context-pages-return" class="list-anchor">#</a>

Returns all open pages in the context.

## browser_context.route(url, handler, **kwargs) {#browser-context-route}
- `url`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-route-option-url"/> &#60;[str]|[Pattern]|[Callable]\[[URL]\]:[bool]&#62; A glob pattern, regex pattern or predicate receiving [URL] to match while routing. When a `base_url` via the context options was provided and the passed URL is a path, it gets merged via the [`new URL()`](https://developer.mozilla.org/en-US/docs/Web/API/URL/URL) constructor.<a href="#browser-context-route-option-url" class="list-anchor">#</a>
- `handler`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-route-option-handler"/> &#60;[Callable]\[[Route], [Request]\]&#62; handler function to route the request.<a href="#browser-context-route-option-handler" class="list-anchor">#</a>
- `times`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-route-option-times"/> &#60;[int]&#62; How often a route should be used. By default it will be used every time.<a href="#browser-context-route-option-times" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-route-return"/> &#60;[NoneType]&#62;<a href="#browser-context-route-return" class="list-anchor">#</a>

Routing provides the capability to modify network requests that are made by any page in the browser context. Once route is enabled, every request matching the url pattern will stall unless it's continued, fulfilled or aborted.

:::note
[browser_context.route(url, handler, **kwargs)](./api/class-browsercontext.mdx#browser-context-route) will not intercept requests intercepted by Service Worker. See [this](https://github.com/microsoft/playwright/issues/1090) issue. We recommend disabling Service Workers when using request interception by setting `browser.new_context.service_workers` to `'block'`.
:::

An example of a naive handler that aborts all image requests:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
context = browser.new_context()
page = context.new_page()
context.route("**/*.{png,jpg,jpeg}", lambda route: route.abort())
page.goto("https://example.com")
browser.close()
```

</TabItem>
<TabItem value="async">

```py
context = await browser.new_context()
page = await context.new_page()
await context.route("**/*.{png,jpg,jpeg}", lambda route: route.abort())
await page.goto("https://example.com")
await browser.close()
```

</TabItem>
</Tabs>

or the same snippet using a regex pattern instead:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
context = browser.new_context()
page = context.new_page()
context.route(re.compile(r"(\.png$)|(\.jpg$)"), lambda route: route.abort())
page = await context.new_page()
page = context.new_page()
page.goto("https://example.com")
browser.close()
```

</TabItem>
<TabItem value="async">

```py
context = await browser.new_context()
page = await context.new_page()
await context.route(re.compile(r"(\.png$)|(\.jpg$)"), lambda route: route.abort())
page = await context.new_page()
await page.goto("https://example.com")
await browser.close()
```

</TabItem>
</Tabs>

It is possible to examine the request to decide the route action. For example, mocking all requests that contain some post data, and leaving all other requests as is:

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
def handle_route(route):
  if ("my-string" in route.request.post_data)
    route.fulfill(body="mocked-data")
  else
    route.continue_()
context.route("/api/**", handle_route)
```

</TabItem>
<TabItem value="async">

```py
def handle_route(route):
  if ("my-string" in route.request.post_data)
    route.fulfill(body="mocked-data")
  else
    route.continue_()
await context.route("/api/**", handle_route)
```

</TabItem>
</Tabs>

Page routes (set up with [page.route(url, handler, **kwargs)](./api/class-page.mdx#page-route)) take precedence over browser context routes when request matches both handlers.

To remove a route with its handler you can use [browser_context.unroute(url, **kwargs)](./api/class-browsercontext.mdx#browser-context-unroute).

:::note
Enabling routing disables http cache.
:::

## browser_context.route_from_har(har, **kwargs) {#browser-context-route-from-har}
- `har`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-route-from-har-option-har"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; Path to a [HAR](http://www.softwareishard.com/blog/har-12-spec) file with prerecorded network data. If `path` is a relative path, then it is resolved relative to the current working directory.<a href="#browser-context-route-from-har-option-har" class="list-anchor">#</a>
- `not_found`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-route-from-har-option-not-found"/> &#60;"abort"|"fallback"&#62; If set to 'abort' any request not found in the HAR file will be aborted.<a href="#browser-context-route-from-har-option-not-found" class="list-anchor">#</a>
  * If set to 'fallback' falls through to the next route handler in the handler chain.

  Defaults to abort.
- `update`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-route-from-har-option-update"/> &#60;[bool]&#62; If specified, updates the given HAR with the actual network information instead of serving from file.<a href="#browser-context-route-from-har-option-update" class="list-anchor">#</a>
- `url`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-route-from-har-option-url"/> &#60;[str]|[Pattern]&#62; A glob pattern, regular expression or predicate to match the request URL. Only requests with URL matching the pattern will be surved from the HAR file. If not specified, all requests are served from the HAR file.<a href="#browser-context-route-from-har-option-url" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-route-from-har-return"/> &#60;[NoneType]&#62;<a href="#browser-context-route-from-har-return" class="list-anchor">#</a>

If specified the network requests that are made in the context will be served from the HAR file. Read more about [Replaying from HAR](../network.mdx#replaying-from-har).

Playwright will not serve requests intercepted by Service Worker from the HAR file. See [this](https://github.com/microsoft/playwright/issues/1090) issue. We recommend disabling Service Workers when using request interception by setting `browser.new_context.service_workers` to `'block'`.

## browser_context.service_workers {#browser-context-service-workers}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-service-workers-return"/> &#60;[List]\[[Worker]\]&#62;<a href="#browser-context-service-workers-return" class="list-anchor">#</a>

:::note
Service workers are only supported on Chromium-based browsers.
:::

All existing service workers in the context.

## browser_context.set_default_navigation_timeout(timeout) {#browser-context-set-default-navigation-timeout}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-default-navigation-timeout-option-timeout"/> &#60;[float]&#62; Maximum navigation time in milliseconds<a href="#browser-context-set-default-navigation-timeout-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-default-navigation-timeout-return"/> &#60;[NoneType]&#62;<a href="#browser-context-set-default-navigation-timeout-return" class="list-anchor">#</a>

This setting will change the default maximum navigation time for the following methods and related shortcuts:
* [page.go_back(**kwargs)](./api/class-page.mdx#page-go-back)
* [page.go_forward(**kwargs)](./api/class-page.mdx#page-go-forward)
* [page.goto(url, **kwargs)](./api/class-page.mdx#page-goto)
* [page.reload(**kwargs)](./api/class-page.mdx#page-reload)
* [page.set_content(html, **kwargs)](./api/class-page.mdx#page-set-content)
* [page.expect_navigation(**kwargs)](./api/class-page.mdx#page-wait-for-navigation)

:::note
[page.set_default_navigation_timeout(timeout)](./api/class-page.mdx#page-set-default-navigation-timeout) and [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) take priority over [browser_context.set_default_navigation_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout).
:::

## browser_context.set_default_timeout(timeout) {#browser-context-set-default-timeout}
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-default-timeout-option-timeout"/> &#60;[float]&#62; Maximum time in milliseconds<a href="#browser-context-set-default-timeout-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-default-timeout-return"/> &#60;[NoneType]&#62;<a href="#browser-context-set-default-timeout-return" class="list-anchor">#</a>

This setting will change the default maximum time for all the methods accepting `timeout` option.

:::note
[page.set_default_navigation_timeout(timeout)](./api/class-page.mdx#page-set-default-navigation-timeout), [page.set_default_timeout(timeout)](./api/class-page.mdx#page-set-default-timeout) and [browser_context.set_default_navigation_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-navigation-timeout) take priority over [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout).
:::

## browser_context.set_extra_http_headers(headers) {#browser-context-set-extra-http-headers}
- `headers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-extra-http-headers-option-headers"/> &#60;[Dict]\[[str], [str]\]&#62; An object containing additional HTTP headers to be sent with every request. All header values must be strings.<a href="#browser-context-set-extra-http-headers-option-headers" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-extra-http-headers-return"/> &#60;[NoneType]&#62;<a href="#browser-context-set-extra-http-headers-return" class="list-anchor">#</a>

The extra HTTP headers will be sent with every request initiated by any page in the context. These headers are merged with page-specific extra HTTP headers set with [page.set_extra_http_headers(headers)](./api/class-page.mdx#page-set-extra-http-headers). If page overrides a particular header, page-specific header value will be used instead of the browser context header value.

:::note
[browser_context.set_extra_http_headers(headers)](./api/class-browsercontext.mdx#browser-context-set-extra-http-headers) does not guarantee the order of headers in the outgoing requests.
:::

## browser_context.set_geolocation(geolocation) {#browser-context-set-geolocation}
- `geolocation`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-geolocation-option-geolocation"/> &#60;[NoneType]|[Dict]&#62;<a href="#browser-context-set-geolocation-option-geolocation" class="list-anchor">#</a>
  - `latitude` &#60;[float]&#62; Latitude between -90 and 90.
  - `longitude` &#60;[float]&#62; Longitude between -180 and 180.
  - `accuracy` &#60;[float]&#62; Non-negative accuracy value. Defaults to `0`.
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-geolocation-return"/> &#60;[NoneType]&#62;<a href="#browser-context-set-geolocation-return" class="list-anchor">#</a>

Sets the context's geolocation. Passing `null` or `undefined` emulates position unavailable.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
browser_context.set_geolocation({"latitude": 59.95, "longitude": 30.31667})
```

</TabItem>
<TabItem value="async">

```py
await browser_context.set_geolocation({"latitude": 59.95, "longitude": 30.31667})
```

</TabItem>
</Tabs>

:::note
Consider using [browser_context.grant_permissions(permissions, **kwargs)](./api/class-browsercontext.mdx#browser-context-grant-permissions) to grant permissions for the browser context pages to read its geolocation.
:::

## browser_context.set_offline(offline) {#browser-context-set-offline}
- `offline`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-offline-option-offline"/> &#60;[bool]&#62; Whether to emulate network being offline for the browser context.<a href="#browser-context-set-offline-option-offline" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-set-offline-return"/> &#60;[NoneType]&#62;<a href="#browser-context-set-offline-return" class="list-anchor">#</a>

## browser_context.storage_state(**kwargs) {#browser-context-storage-state}
- `path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-storage-state-option-path"/> &#60;[Union]\[[str], [pathlib.Path]\]&#62; The file path to save the storage state to. If `path` is a relative path, then it is resolved relative to current working directory. If no path is provided, storage state is still returned, but won't be saved to the disk.<a href="#browser-context-storage-state-option-path" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-storage-state-return"/> &#60;[Dict]&#62;<a href="#browser-context-storage-state-return" class="list-anchor">#</a>
  - `cookies` &#60;[List]\[[Dict]\]&#62;
    - `name` &#60;[str]&#62;
    - `value` &#60;[str]&#62;
    - `domain` &#60;[str]&#62;
    - `path` &#60;[str]&#62;
    - `expires` &#60;[float]&#62; Unix time in seconds.
    - `httpOnly` &#60;[bool]&#62;
    - `secure` &#60;[bool]&#62;
    - `sameSite` &#60;"Strict"|"Lax"|"None"&#62;
  - `origins` &#60;[List]\[[Dict]\]&#62;
    - `origin` &#60;[str]&#62;
    - `localStorage` &#60;[List]\[[Dict]\]&#62;
      - `name` &#60;[str]&#62;
      - `value` &#60;[str]&#62;

Returns storage state for this browser context, contains current cookies and local storage snapshot.

## browser_context.unroute(url, **kwargs) {#browser-context-unroute}
- `url`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-unroute-option-url"/> &#60;[str]|[Pattern]|[Callable]\[[URL]\]:[bool]&#62; A glob pattern, regex pattern or predicate receiving [URL] used to register a routing with [browser_context.route(url, handler, **kwargs)](./api/class-browsercontext.mdx#browser-context-route).<a href="#browser-context-unroute-option-url" class="list-anchor">#</a>
- `handler`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-unroute-option-handler"/> &#60;[Callable]\[[Route], [Request]\]&#62; Optional handler function used to register a routing with [browser_context.route(url, handler, **kwargs)](./api/class-browsercontext.mdx#browser-context-route).<a href="#browser-context-unroute-option-handler" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-unroute-return"/> &#60;[NoneType]&#62;<a href="#browser-context-unroute-return" class="list-anchor">#</a>

Removes a route created with [browser_context.route(url, handler, **kwargs)](./api/class-browsercontext.mdx#browser-context-route). When `handler` is not specified, removes all routes for the `url`.

## browser_context.wait_for_event(event, **kwargs) {#browser-context-wait-for-event-2}
- `event`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-wait-for-event-2-option-event"/> &#60;[str]&#62; Event name, same one typically passed into `*.on(event)`.<a href="#browser-context-wait-for-event-2-option-event" class="list-anchor">#</a>
- `predicate`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-wait-for-event-2-option-predicate"/> &#60;[Callable]&#62; Receives the event data and resolves to truthy value when the waiting should resolve.<a href="#browser-context-wait-for-event-2-option-predicate" class="list-anchor">#</a>
- `timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-wait-for-event-2-option-timeout"/> &#60;[float]&#62; Maximum time to wait for in milliseconds. Defaults to `30000` (30 seconds). Pass `0` to disable timeout. The default value can be changed by using the [browser_context.set_default_timeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout).<a href="#browser-context-wait-for-event-2-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="browser-context-wait-for-event-2-return"/> &#60;[Any]&#62;<a href="#browser-context-wait-for-event-2-return" class="list-anchor">#</a>

:::note
In most cases, you should use [browser_context.expect_event(event, **kwargs)](./api/class-browsercontext.mdx#browser-context-wait-for-event).
:::

Waits for given `event` to fire. If predicate is provided, it passes event's value into the `predicate` function and waits for `predicate(event)` to return a truthy value. Will throw an error if the browser context is closed before the `event` is fired.

## browser_context.request {#browser-context-request}
- type: &#60;[APIRequestContext]&#62;

API testing helper associated with this context. Requests made with this API will use context cookies.

## browser_context.tracing {#browser-context-tracing}
- type: &#60;[Tracing]&#62;

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[APIResponseAssertions]: ./test-assertions.mdx "APIResponseAssertions"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[Error]: ./api/class-error.mdx "Error"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./test-assertions.mdx "LocatorAssertions"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./test-assertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./test-assertions.mdx "PlaywrightAssertions"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Any]: https://docs.python.org/3/library/typing.html#typing.Any "Any"
[bool]: https://docs.python.org/3/library/stdtypes.html "bool"
[bytes]: https://docs.python.org/3/library/stdtypes.html#bytes "bytes"
[Callable]: https://docs.python.org/3/library/typing.html#typing.Callable "Callable"
[EventContextManager]: https://docs.python.org/3/reference/datamodel.html#context-managers "Event context manager"
[EventEmitter]: https://pyee.readthedocs.io/en/latest/#pyee.BaseEventEmitter "EventEmitter"
[Exception]: https://docs.python.org/3/library/exceptions.html#Exception "Exception"
[Dict]: https://docs.python.org/3/library/typing.html#typing.Dict "Dict"
[float]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "float"
[int]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "int"
[List]: https://docs.python.org/3/library/typing.html#typing.List "List"
[NoneType]: https://docs.python.org/3/library/constants.html#None "None"
[Pattern]: https://docs.python.org/3/library/re.html "Pattern"
[URL]: https://en.wikipedia.org/wiki/URL "URL"
[pathlib.Path]: https://realpython.com/python-pathlib/ "pathlib.Path"
[str]: https://docs.python.org/3/library/stdtypes.html#text-sequence-type-str "str"
[Union]: https://docs.python.org/3/library/typing.html#typing.Union "Union"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
